--- a/Smart_Home_back/src/main/resources/application.properties
+++ b/Smart_Home_back/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/smart-house?serverTimezone=UTC
+# Configuration base de données (Docker)
+spring.datasource.url=jdbc:mysql://mysql:3306/smart-house?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.open-in-view = true
+
+# Configuration JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
+
+# Port du backend
 server.port=8085
